# FlightInterpreter

./: BinaryExpression.cpp  BinaryExpression.h  BindCommand.cpp  BindCommand.h  BooleanExpression.cpp  BooleanExpression.h  CMakeLists.txt  Command.cpp  Command.h  ConditionInCondition.cpp  ConditionInCondition.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  Div.cpp  Div.h  EntercCommand.cpp  EntercCommand.h  EqualCommand.cpp  EqualCommand.h  Expression.cpp  Expression.h  ExpressionCommand.cpp  ExpressionCommand.h  FlightReader.cpp  FlightReader.h  IfCommand.cpp  IfCommand.h  InfixToPrefix.cpp  InfixToPrefix.h  LoopCommand.cpp  LoopCommand.h  Maps.cpp  Maps.h  Minus.cpp  Minus.h  Mul.cpp  (+17 more)
